MSE link now opens on seperate tab

--- a/NatureBoysStats/Views/Home/Index.cshtml
+++ b/NatureBoysStats/Views/Home/Index.cshtml
@@ -12,14 +12,15 @@
    @* <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/ooh-la-la-feat-greg-nice-dj-premier/1517683927?i=1517683935"></iframe>*@
     <div style="border:groove; align-content:center">
         <h3 >Pregame Tunes</h3>
-        <audio controls style="background-color:green" autoplay>
+        @*<audio controls style="background-color:green" autoplay>*@
+        <audio controls style="background-color:green" >
             <source src="/02 ooh la la (feat. Greg Nice & DJ P.mp3" type="audio/mp3" />
             <source src="/01 This Is America.mp3" type="audio/mp3" />
             
         </audio>
     </div>
     <h1>Game Schedule</h1>
-    <a href="https://msehockey.com/schedules/schedules.cfm">Game Times</a>
+    <a href="https://msehockey.com/schedules/schedules.cfm" target="_blank">Game Times</a>
     <br />
     <h2>The Detroit Red Wings</h2>
     <p>@Model.teams[5].strDescriptionEN</p>
